--- a/test.ipynb
+++ b/test.ipynb
@@ -202,6 +202,33 @@
     "tw_2303_1['Date'] = tw_2303_1['Date'].map(lambda x:f'{x.year}-{x.month}-{x.day}')\n",
     "tw_2303_1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "建立檔案\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from datetime import datetime\n",
+    "current = os.path.abspath(\"./\")\n",
+    "current_date = datetime.now()\n",
+    "stockid = \"2303\"\n",
+    "filename = f\"{stockid}_{current_date.year}_{current_date.month}_{current_date.day}.csv\"\n",
+    "file_path = os.path.join(current,'data',filename)\n",
+    "if not os.path.exists(file_path):\n",
+    "    print(\"建立檔案\")\n",
+    "else:\n",
+    "    print(\"讀取檔案\")"
+   ]
   }
  ],
  "metadata": {
